cmake_minimum_required(VERSION 3.29)
project(c C)

set(CMAKE_C_STANDARD 23)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(c main.c)
add_executable(AHPA3 AHPA3/ahpa3.c)
add_executable(MultiArray testing/multi-array.c)
add_executable(AHPA4 AHPA4/ahpa4.c)
add_executable(AHPA5 AHPA5/ahpa5.c)
add_executable(AHPA6 AHPA6/ahpa6.c)
add_executable(AHPA7 AHPA7/ahpa7.c)
add_executable(AHPA8 AHPA8/ahpa8.c)
add_executable(AHPA9 AHPA9/ahpa9.c)
add_executable(HW1 HW1/hw1.c)